# docs/swagger.json
@@ -84,7 +84,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/users.User"
+                            "$ref": "#/definitions/dto.SignUpData"
                         }
                     }
                 ],
@@ -260,6 +260,23 @@
             "type": "object",
             "properties": {
                 "inputs": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.SignUpData": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "surname": {
                     "type": "string"
                 }
             }
